# nordpool-temperature-control

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  HA_HEATING_LOGS.md  HEATING_DECISIONS_LOG.md  HEATING_LOGS.md  README.md  background_tasks.py  config.py  control.py  debug_endpoint.py  docker-compose.yml  ha_client.py  main.py  main_old.py  pyproject.toml  temperature_logic.py  test_temperature_control.py  web_app.py
data/: heating_decisions.jsonl
scripts/: analyze_today_prices.py  check_yesterday_heating.py  debug_heating_analysis.py  debug_price_at_changes.py  debug_price_sensor.py  simulate_cron_yesterday.py  test_actual_data.py  test_ha_logger.py  test_logging_local.py  test_switch_history.py  verify_price_alignment.py
src/: __init__.py  background_tasks.py  config.py  control.py  ha_client.py  heating_logger.py  temperature_logic.py
templates/: index.html
tests/: test_temperature_control.py
web/: __init__.py  app.py
web/templates/: index.html
