[project]
name = "ha-api-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "pytz>=2024.1",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-caching>=2.3.0",
    "gunicorn>=23.0.0",
]
